[] new files to set filters on your face in realTime based on facial points predictor

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-scikit-learn==1.2.0
-matplotlib==3.6.2
-numpy==1.24.0
-pandas~=1.5.1
+scikit-learn~=1.2.1
+matplotlib~=3.6.3
+numpy~=1.24.2
+pandas~=1.5.3
+sklearn~=0.0
+scipy~=1.10.0
+nltk
+beautifulsoup4
+requests
+seaborn
+deep-translator
