--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 scikit-learn==1.3.0
 matplotlib==3.7.2
 numpy==1.24.3
-pandas==2.0.3
+pandas<2.0.0,>=1.5.3
 sklearn==0.0.post5
 scipy==1.11.1
 nltk==3.8.1
@@ -9,7 +9,6 @@ beautifulsoup4
 requests
 seaborn
 deep-translator
-protobuf==3.20.0
 docx2txt
 html5lib
 spacy
@@ -23,3 +22,4 @@ keras_tuner==1.3.5
 keras==2.13.1
 tensorflow==2.13.0
 statsmodels==0.14.0
+mlxtend==0.23.0
